Project and Event Section added Our core members will be added soon. Bugs needs to be fixed. Flip card bug, back isn't visible

--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,63 @@ nav {
 	}
 }
 
+.project-card {
+	height: 520px;
+	width: 30%;
+	margin: 2%;
+	perspective: 1000px;
+	display: inline-block;
+	vertical-align: top;
+
+	.card-inner {
+		position: relative;
+		width: 100%;
+		height: 100%;
+		transition: transform 0.8s;
+		transform-style: preserve-3d;
+		cursor: pointer;
+	}
+
+	.card-front,
+	.card-back {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		border-radius: 15px;
+		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+		padding: 20px;
+		box-sizing: border-box;
+		background-color: #ffffff;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: flex-start;
+		text-align: center;
+	}
+
+	.card-front {
+		z-index: 2;
+	}
+
+	.card-back {
+		transform: rotateY(180deg);
+		background: #f8f8f8;
+		overflow-y: auto;
+	}
+
+	.card-img {
+		width: 100%;
+		height: 60%;
+		margin-bottom: 10px;
+		border-radius: 12px;
+	}
+}
+
+.project-card:hover .card-inner {
+	transform: rotateY(180deg);
+	cursor: pointer;
+}
+
 .footer {
 	height: 35vh;
 	width: 100%;
@@ -128,6 +185,7 @@ nav {
 	.sociolinks {
 		display: flex;
 		align-items: center;
+		transition: all 0.3s ease;
 		.links {
 			margin-top: 2px;
 			background-color: #222529;
@@ -145,6 +203,8 @@ nav {
 			line-height: 44px;
 			cursor: pointer;
 			background-color: #45494f;
+			box-shadow: 4px 4px 16px 2px rgba(24, 24, 24, 0.804);
+			transform: translateY(-6px);
 		}
 	}
 }
